# osm

./: .gitignore  .pkg  CMakeLists.txt
include/osm/: decoder.h  inflate.h  memory.h  osm.h  tags.h  varint.h
src/: osm.cc
test/: main.cc  read_raw_test.cc
